--- a/src/main/resources/static/admin/assets/scss/style.scss
+++ b/src/main/resources/static/admin/assets/scss/style.scss
@@ -641,9 +641,6 @@ aside.left-panel {
     }
 
 
-
-
-
     .breadcrumbs {
         float: left;
         margin-top: 30px;
@@ -681,7 +678,7 @@ aside.left-panel {
         }
     }
 }
- 
+
 .right-panel {
     header.header {
         background: $header-bg;
@@ -2331,6 +2328,9 @@ footer.site-footer {
 }
 
 @media (max-width: 1024px) {
+    .right-panel {
+		 margin-left: 0px !important;
+	}
     .open{
         aside.left-panel  {
             width: 280px;
